--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,14 @@ services:
       - "3000:3000"
     depends_on:
       - db
+    environment:
+      WEBPACKER_DEV_SERVER_HOST: webpacker
+  webpacker:
+    build: .
+    environment:
+      NODE_ENV: development
+      RAILS_ENV: development
+      WEBPACKER_DEV_SERVER_HOST: 0.0.0.0
+    command: ./bin/webpack-dev-server
+    ports:
+      - '3035:3035'
